--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [IDENTIFICATION]
 # Set your user agent string here.
-USERAGENT = DEFAULT AGENT
+USERAGENT = "IR F19 25479033,44687700,37508576"
 
 [CONNECTION]
 HOST = styx.ics.uci.edu
