--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [IDENTIFICATION]
 # Set your user agent string here.
-USERAGENT = IR S25 25479033,44687700,37508576
+USERAGENT = IR US25 25479033,44687700,37508576
 
 [CONNECTION]
 HOST = styx.ics.uci.edu
